ansible module to path configuration added

--- a/install/setup.yml
+++ b/install/setup.yml
@@ -4,3 +4,10 @@
   become: true
   roles:
     - installConfSeeker
+  tasks:
+    - name: "add path to every .bashrc"
+      confseeker:
+        homeDirectory: "/home"
+        shellConf: ".bashrc"
+   #   register: results
+   # - debug: var=results
